test/tests/compiler/1_int_constants/invalid_parse/misspelled_keyword.plx
pub main(none) i32 {
    returns 0
}
